--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>AngularElementGeolocation</title>
   <base href="/">
-  <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=true&key=AIzaSyAR0hyPj99LaXPGxHjdX0DztytnzjEGENU&libraries=places&language=en-US"></script>
+  <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=true&key=AIzaSyAR0hyPj99LaXPGxHjdX0DztytnzjEGENU&libraries=places&language=es-AR"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
